--- a/demo/src/main/resources/templates/admin/index.html
+++ b/demo/src/main/resources/templates/admin/index.html
@@ -1,34 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>List Users</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Landing Page</title>
 </head>
 <body>
-<table border="1px">
-  <tr>
-    <th>ID</th>
-    <th>Username</th>
-    <th>Role</th>
-  </tr>
+<h2 th:text="${message}"></h2>
 
-  <p th:if="${users} != null" th:text="|Number of available communities: ${#lists.size(users)}|"></p>
-
-  <tr th:if="${#lists.isEmpty(users)}">
-    <td colspan="4">The community list is empty</td>
-  </tr>
-  <tr th:each="user : ${users}">
-    <td th:text="${user.id}" />
-    <td th:text="${user.username}" />
-    <td th:text="${user.roles}" />
-    <td>
-      <th:block th:with="id=${user.id}">
-        <a th:href="@{'users/' + ${id}}">More</a>
-      </th:block>
-    </td>
-  </tr>
-</table>
-<a href="#" onclick="history.go(-1)">Back to the panel</a>
-<a th:href="@{'/logout'}">Logout</a>
+<a th:href="@{/admin}">Admin Panel</a>
+<a th:href="@{/logout}">Logout</a>
 </body>
 </html>
