--- a/demo/src/main/resources/templates/user/index.html
+++ b/demo/src/main/resources/templates/user/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Static</title>
+    <title>Landing Page</title>
 </head>
 <body>
+<h2 th:text="${message}"></h2>
 
-<h2> User role could not be deleted </h2>
-<a href="#" onclick="history.go(-1)">Go back</a>
+<a th:href="@{/user}">User Panel</a>
+<a th:href="@{/logout}">Logout</a>
 </body>
 </html>
