--- a/demo/src/main/resources/templates/admin/main.html
+++ b/demo/src/main/resources/templates/admin/main.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>List Users</title>
 </head>
 <body>
-<table border="1px">
+<table class="table table-bordered table-striped">
   <tr>
     <th>ID</th>
     <th>Username</th>
