--- a/demo/src/main/resources/templates/community/update.html
+++ b/demo/src/main/resources/templates/community/update.html
@@ -7,16 +7,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Update Community</title>
 </head>
 <body class="update-body">
 <h2>Update The Community</h2>
 <hr>
 <div>
-    <form action="#" method="POST" th:action="@{'update'}" th:object="${community}">
+    <form action="#" method="POST" th:action="@{update}" th:object="${community}">
+        <div th:if="${#fields.hasAnyErrors()}" class="alert alert-info">
+            <p>Please Correct Errors Below</p>
+        </div>
         <input type="hidden" th:field="*{id}"/> <br/>
-        <input type="text" th:field="*{name}" placeholder="Name"/> <br/>
-        <input type="text" th:field="*{description}" placeholder="Description"/> <br/>
+        <div class="mb-3">
+            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="alert alert-danger"></p>
+            <label for="name" class="form-label">Name:</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="Name"/>
+        </div>
+
+        <div class="mb-3">
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger"></p>
+            <label for="description" class="form-label">Description:</label>
+            <input type="text" th:field="*{description}" class="form-control" placeholder="Description"/>
+        </div>
         <input type="submit" value="Update Community"/>
     </form>
 </div>
