--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -7,6 +7,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Login</title>
 </head>
 <body>
@@ -14,11 +16,13 @@
     Invalid username and password.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> Login:
-        <input type="text" name="username"/> </label></div>
-    <div><label> Password:
-        <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Sign In"/></div>
+    <div class="mb-3">
+        <label class="form-label"> Login:<input type="text" class="form-control" name="username"/> </label>
+    </div>
+    <div class="mb-3">
+        <label class="form-label"> Password:<input type="password" class="form-control" name="password"/> </label>
+    </div>
+    <input type="submit" value="Sign In"/>
 </form>
 <a th:href="@{'/signup'}">New here? Signup</a>
 </body>
