--- a/demo/src/main/resources/templates/signup.html
+++ b/demo/src/main/resources/templates/signup.html
@@ -7,28 +7,29 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Signup</title>
 </head>
 <body>
-
 <form action="#" method="POST" th:action="@{/signup}" th:object="${signupDto}">
     <div th:if="${#fields.hasAnyErrors()}" class="alert alert-info">
         <p>Please Correct Errors Below</p>
     </div>
     <div class="mb-3">
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"></p>
         <label for="username" class="form-label">Username:</label>
         <input type="text" th:field="*{username}" class="form-control" placeholder="Username"/> <br/>
-        <p th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="alert alert-danger"></p>
     </div>
     <div class="mb-3">
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger"></p>
         <label for="email" class="form-label">Email:</label>
         <input type="text" th:field="*{email}" class="form-control" placeholder="Email"/> <br/>
-        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="alert alert-danger"></p>
     </div>
     <div class="mb-3">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"></p>
         <label for="password" class="form-label">Password:</label>
         <input type="password" th:field="*{password}" class="form-control" placeholder="Password"/> <br/>
-        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="alert alert-danger"></p>
     </div>
     <input type="submit" value="Sign up"/>
 </form>
