--- a/demo/src/main/resources/templates/user/update.html
+++ b/demo/src/main/resources/templates/user/update.html
@@ -7,12 +7,14 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>Update user</title>
 </head>
 <body class="update-body">
 <h2 th:text="${user.username}"></h2>
 
-<table border="1px">
+<table class="table table-bordered table-striped">
   <tr>
     <th>Roles</th>
     <th>Actions</th>
